// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`changelogMd > matches snapshot 1`] = `
"# Changelog

## 1.0.0

- Initial release
"
`;

exports[`exampleRune > matches snapshot 1`] = `
"// Ready-to-run rune — runs directly from the plugin install location.
// Users activate it by adding your plugin to their project config.
//
// permissions (plugin.json):
//   use:
//     allow: []  — add patterns like fs.read:./** if you use utils.fs
//     deny:  []

import { md, section } from '@utils'

// export async function args(b) {
//   return b
//     .option('-v, --verbose', 'Verbose output', false)
//     .build()
// }

export async function use(args) {
  // args._         — data positionals (command tokens stripped)
  // args.verbose   — named flag (if args export is defined above)
  // utils.fs.cwd() — absolute path to the user's project root

  return section.create('example', {
    type: 'markdown',
    content: md.h3('Example') + '\\n' + md.ul(['Replace with real output']),
  });
}
"
`;

exports[`exampleTemplate > matches snapshot 1`] = `
"// Template rune — copied into the user's project by \`crunes template use\`.
// Edit this file to define what a new rune looks like when scaffolded from your plugin.
//
// permissions (plugin.json):
//   use:
//     allow: []  — add patterns like fs.read:./** if you use utils.fs
//     deny:  []

import { md, section } from '@utils'

// export async function args(b) {
//   return b
//     .option('-v, --verbose', 'Verbose output', false)
//     .build()
// }

export async function use(args) {
  // args._         — data positionals (command tokens stripped)
  // args.verbose   — named flag (if args export is defined above)
  // utils.fs.cwd() — absolute path to the user's project root

  return section.create('example', {
    type: 'markdown',
    content: md.h3('Example') + '\\n' + md.ul(['Replace with real output']),
  });
}
"
`;

exports[`marketplaceJson > matches snapshot 1`] = `
"{
  "format": "1",
  "name": "my-plugin",
  "description": "A test plugin",
  "owner": {
    "name": "Alice"
  },
  "plugins": [
    {
      "name": "my-plugin",
      "description": "A test plugin",
      "version": "1.0.0",
      "author": {
        "name": "Alice"
      },
      "source": "./",
      "category": "runes",
      "license": "MIT"
    }
  ]
}
"
`;

exports[`pluginJson > matches snapshot 1`] = `
"{
  "format": "1",
  "runes": {
    "example": {
      "name": "Example Rune",
      "description": "Replace with your rune description",
      "permissions": {
        "use": {
          "allow": [],
          "deny": []
        }
      }
    }
  },
  "templates": {
    "example-template": {
      "name": "Example Template",
      "description": "Replace with your template description"
    }
  }
}
"
`;

exports[`readmeMd > matches snapshot 1`] = `
"# my-plugin

A test plugin

## Installation

Add this plugin via the crunes marketplace.
"
`;
